--- a/src/layouts/sidebar.css
+++ b/src/layouts/sidebar.css
@@ -21,9 +21,9 @@
     cursor: pointer;
   }
   
-  /* .sidebar button {
+  .sidebar button {
     position: absolute;
     bottom: 20px;
     left: 5px;
-  } */
+  }
   
