--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* App.css */
 body, html, #root {
-  background-color: #FFF4B5;
+  background-color: #FFEEAD;
   margin: 0;
   padding: 0;
   min-height: 100vh;
