--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-/* App.css */
+/* App.css
 body, html, #root {
-  background-color: #FFEEAD;
+  background-color: #f2f2f2;
   margin: 0;
   padding: 0;
   min-height: 100vh;
-}
+  font-family: 'Roboto', sans-serif;
+} */
