--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
-/* App.css
+/* App.css 
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 body, html, #root {
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; 
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  font-family: 'Roboto', sans-serif;
-} */
+  font-family: 'Permanent Marker', cursive;
+}
+*/
