--- a/src/Income Expense/Design.css
+++ b/src/Income Expense/Design.css
@@ -2,28 +2,37 @@
   background-color: #fff; /* Set background color for input field */
   border: #000000;
   border-radius: 8px; /* Set border radius */
-   /* font-family: 'Permanent Marker', cursive; */
+  font-size: 12px; /* Adjust font size for input field */
+  /* font-family: 'Permanent Marker', cursive; */
 }
+
 .textField-root .MuiOutlinedInput-notchedOutline {
   border: 1px solid #bbb9b9; /* Set border color and thickness */
   /* font-family: 'Permanent Marker', cursive; */
 }
+
 .textField-root .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
   border-color: #000000; /* Change border color on hover */
   /* font-family: 'Permanent Marker', cursive; */
 }
-.textField-root
-  .MuiOutlinedInput-root.Mui-focused
-  .MuiOutlinedInput-notchedOutline {
+
+.textField-root .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
   border-color: #6200ea; /* Change border color when focused */
   /* font-family: 'Permanent Marker', cursive; */
 }
+
 .textField-root .MuiInputLabel-outlined.Mui-focused {
-  background-image:linear-gradient(88.8deg, rgb(239, 171, 245) 13.4%, rgb(196, 181, 249) 76.3%);/* Background color for the label when focused */
+  background-image: linear-gradient(88.8deg, rgb(239, 171, 245) 13.4%, rgb(196, 181, 249) 76.3%); /* Background color for the label when focused */
   padding: 0 20px; /* Padding to ensure the label text is not cut off */
   border-radius: 10px; /* Border radius for the label background */
   color: #333;
-   /* font-family: 'Permanent Marker', cursive; */
+  font-size: 12px; /* Adjust font size for label */
+  /* font-family: 'Permanent Marker', cursive; */
+}
+
+/* Optional: Set font size for unfocused label */
+.textField-root .MuiInputLabel-outlined {
+  font-size: 12px; /* Adjust font size for unfocused label */
 }
 
 
