--- a/src/Income Expense/Design.css
+++ b/src/Income Expense/Design.css
@@ -4,25 +4,25 @@
   border-radius: 8px; /* Set border radius */
   font-size: 14px; /* Adjust font size for input field */
   /* font-family: 'Permanent Marker', cursive; */
-   /* font-family: 'Poppins', sans-serif; */
+   font-family: 'Poppins', sans-serif;
 }
 
 .textField-root .MuiOutlinedInput-notchedOutline {
   border: 1px solid #bbb9b9; /* Set border color and thickness */
   /* font-family: 'Permanent Marker', cursive; */
-   /* font-family: 'Poppins', sans-serif; */
+   font-family: 'Poppins', sans-serif;
 }
 
 .textField-root .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
   border-color: #000000; /* Change border color on hover */
   /* font-family: 'Permanent Marker', cursive; */
-   /* font-family: 'Poppins', sans-serif; */
+   font-family: 'Poppins', sans-serif;
 }
 
 .textField-root .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
   border-color: #6200ea; /* Change border color when focused */
   /* font-family: 'Permanent Marker', cursive; */
-   /* font-family: 'Poppins', sans-serif; */
+   font-family: 'Poppins', sans-serif;
 }
 
 .textField-root .MuiInputLabel-outlined.Mui-focused {
@@ -32,7 +32,7 @@
   color: #333;
   font-size: 14px; /* Adjust font size for label */
   /* font-family: 'Permanent Marker', cursive; */
-   /* font-family: 'Poppins', sans-serif; */
+   font-family: 'Poppins', sans-serif;
 }
 
 /* Optional: Set font size for unfocused label */
