--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body, html, #root {
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 body, html, #root {
-   background-color: #f2f2f2; 
+  /*  background-color: #f2f2f2;  */
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -29,3 +29,7 @@ body, html, #root {
 }
 
  */
+
+ body {
+  font-family: 'Poppins', sans-serif;
+}
