--- a/src/Income Expense/Design.css
+++ b/src/Income Expense/Design.css
@@ -2,7 +2,7 @@
   background-color: #fff; 
   border: #000000; 
   border-radius: 8px; 
-  font-size: 14px; 
+  font-size: 12px; 
   font-family: 'Poppins', sans-serif;
 }
 
@@ -17,15 +17,16 @@
 }
 
 .textField-root .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline { 
-  border-color: #6200ea; 
+  border-color: #3498DB; 
   font-family: 'Poppins', sans-serif;
 }
 
 .textField-root .MuiInputLabel-outlined.Mui-focused { 
-  background-image: linear-gradient(88.8deg, rgb(239, 171, 245) 13.4%, rgb(196, 181, 249) 76.3%); 
+  /* background-image: linear-gradient(88.8deg, rgb(239, 171, 245) 13.4%, rgb(196, 181, 249) 76.3%);  */
+  background-color: #3498DB;
   padding: 0 20px; 
   border-radius: 10px; 
-  color: #333; 
+  color: #fff; 
   font-size: 14px; 
   font-family: 'Poppins', sans-serif;
 }
